added pictures and compare info

--- a/pages/compare.html
+++ b/pages/compare.html
@@ -75,6 +75,7 @@
                 <button class="show-btn">Show characters</button>
             </div>
             <div class="output-characters"></div>
+            <button class="compare-btn hidden">Compare characters</button>
             <div class="compare-holder"></div>
         </div>
     </main>
