edited selects and yellow color

--- a/pages/outro.html
+++ b/pages/outro.html
@@ -26,8 +26,11 @@
         </nav>
     </header>
     
-    <main class="main">
-        <h2 class="h2">Placeholder for rolling outro text</h2>
+    <main class="main-outro">
+        <div class="credits">
+            <h2 class="h2-outro">Placeholder for rolling outro text</h2>
+            <p class="p-outro">Thank you for taking the time to check out my project! Special thanks to my lecturer Brandon Tsegai for the fun lectures. May the force be with you!</p>
+        </div>
     </main>
 
     <footer class="footer">
@@ -35,6 +38,6 @@
     </footer>
 
 
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
