--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
                     <a href="/index.html" class="nav-link">home</a>
                 </li>
                 <li class="nav-li">
-                    <a href="/pages/compare.html" class="nav-link">compare</a>
+                    <a href="/pages/compare.html" class="nav-link">compare characters</a>
                 </li>
                 <li class="nav-li">
                     <a href="/pages/outro.html" class="nav-link">outro</a>
