fixed links for pages

--- a/pages/outro.html
+++ b/pages/outro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,8 @@
     <link rel="stylesheet" href="/styles/style.css">
     <title>Star Wars Characters</title>
 </head>
-<body>
+
+<body class="body-outro">
 
     <header>
         <h1 class="h1">STAR WARS</h1>
@@ -25,11 +27,25 @@
             </ul>
         </nav>
     </header>
-    
+
     <main class="main-outro">
-        <div class="credits">
-            <h2 class="h2-outro">Placeholder for rolling outro text</h2>
-            <p class="p-outro">Thank you for taking the time to check out my project! Special thanks to my lecturer Brandon Tsegai for the fun lectures. May the force be with you!</p>
+        <div class="container">
+            <div class="credits">
+                <h2 class="h2-outro">Placeholder for rolling outro text</h2>
+                <p class="p-outro">Thank you for taking the time to check out my project! Special thanks to my lecturer
+                    Brandon Tsegai for the fun lectures. May the force be with you!
+                </p>
+                <p class="p-outro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis tenetur quo,
+                    fugit ratione aut, earum optio magni vitae vel laborum culpa consequatur expedita molestias odit
+                    voluptate placeat minima provident alias excepturi debitis soluta incidunt ipsum porro? Corporis,
+                    dignissimos velit ducimus, veritatis nesciunt dolor nostrum nobis optio dolores accusantium illo!
+                </p>
+                <p class="p-outro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis tenetur quo,
+                    fugit ratione aut, earum optio magni vitae vel laborum culpa consequatur expedita molestias odit
+                    voluptate placeat minima provident alias excepturi debitis soluta incidunt ipsum porro? Corporis,
+                    dignissimos velit ducimus, veritatis nesciunt dolor nostrum nobis optio dolores accusantium illo!
+                </p>
+            </div>
         </div>
     </main>
 
@@ -40,4 +56,5 @@
 
     <script src="../main.js"></script>
 </body>
+
 </html>
