--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <nav class="nav-bar">
             <ul class="nav-ul">
                 <li class="nav-li">
-                    <a href="/index.html" class="nav-link">home</a>
+                    <a href="./index.html" class="nav-link">home</a>
                 </li>
                 <li class="nav-li">
-                    <a href="/pages/compare.html" class="nav-link">compare characters</a>
+                    <a href="./pages/compare.html" class="nav-link">compare characters</a>
                 </li>
                 <li class="nav-li">
-                    <a href="/pages/outro.html" class="nav-link">outro</a>
+                    <a href="./pages/outro.html" class="nav-link">outro</a>
                 </li>
             </ul>
         </nav>
@@ -38,6 +38,6 @@
     </footer>
 
 
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
