--- a/pages/compare.html
+++ b/pages/compare.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Star Wars Characters</title>
 </head>
 <body>
@@ -14,13 +14,13 @@
         <nav class="nav-bar">
             <ul class="nav-ul">
                 <li class="nav-li">
-                    <a href="/index.html" class="nav-link">home</a>
+                    <a href="./index.html" class="nav-link">home</a>
                 </li>
                 <li class="nav-li">
-                    <a href="/pages/compare.html" class="nav-link">compare</a>
+                    <a href="./pages/compare.html" class="nav-link">compare</a>
                 </li>
                 <li class="nav-li">
-                    <a href="/pages/outro.html" class="nav-link">outro</a>
+                    <a href="./pages/outro.html" class="nav-link">outro</a>
                 </li>
             </ul>
         </nav>
@@ -85,6 +85,6 @@
     </footer>
 
 
-    <script src="/main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
