--- a/pages/compare.html
+++ b/pages/compare.html
@@ -14,7 +14,7 @@
         <nav class="nav-bar">
             <ul class="nav-ul">
                 <li class="nav-li">
-                    <a href="./index.html" class="nav-link">home</a>
+                    <a href="../index.html" class="nav-link">home</a>
                 </li>
                 <li class="nav-li">
                     <a href="./pages/compare.html" class="nav-link">compare</a>
