--- a/pages/outro.html
+++ b/pages/outro.html
@@ -16,13 +16,13 @@
         <nav class="nav-bar">
             <ul class="nav-ul">
                 <li class="nav-li">
-                    <a href="/index.html" class="nav-link">home</a>
+                    <a href="../index.html" class="nav-link">home</a>
                 </li>
                 <li class="nav-li">
-                    <a href="/pages/compare.html" class="nav-link">compare</a>
+                    <a href="./compare.html" class="nav-link">compare</a>
                 </li>
                 <li class="nav-li">
-                    <a href="/pages/outro.html" class="nav-link">outro</a>
+                    <a href="./outro.html" class="nav-link">outro</a>
                 </li>
             </ul>
         </nav>
