--- a/pages/compare.html
+++ b/pages/compare.html
@@ -17,10 +17,10 @@
                     <a href="../index.html" class="nav-link">home</a>
                 </li>
                 <li class="nav-li">
-                    <a href="./pages/compare.html" class="nav-link">compare</a>
+                    <a href="./compare.html" class="nav-link">compare</a>
                 </li>
                 <li class="nav-li">
-                    <a href="./pages/outro.html" class="nav-link">outro</a>
+                    <a href="./outro.html" class="nav-link">outro</a>
                 </li>
             </ul>
         </nav>
