--- a/pages/compare.html
+++ b/pages/compare.html
@@ -75,14 +75,12 @@
                 <button class="show-btn">Show characters</button>
             </div>
             <div class="output-characters"></div>
+            <!-- <button class="info-btn hidden">Show additional info</button> -->
             <button class="compare-btn hidden">Compare characters</button>
             <div class="compare-holder"></div>
+            <div class="differences"></div>
         </div>
     </main>
-
-    <footer class="footer">
-
-    </footer>
 
 
     <script src="../main.js"></script>
