addet outro text and effect, edited vh and color on active page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <title>Star Wars Characters</title>
 </head>
+
 <body>
 
     <header>
@@ -17,7 +19,7 @@
         <nav class="nav-bar">
             <ul class="nav-ul">
                 <li class="nav-li">
-                    <a href="./index.html" class="nav-link">home</a>
+                    <a href="./index.html" class="nav-link active">home</a>
                 </li>
                 <li class="nav-li">
                     <a href="./pages/compare.html" class="nav-link">compare characters</a>
@@ -28,16 +30,15 @@
             </ul>
         </nav>
     </header>
-    
+
     <main class="main-index">
-        <h2 class="h2">Test</h2>
+        <h2 class="h2"></h2>
+        <img src="https://lumiere-a.akamaihd.net/v1/images/hb_disneyplus_skywalkersaga_mobile_19267_e964ed2c.jpeg?region=0,0,640,400"
+            alt="Star Wars movie poster" style="margin-top: 20px;">
     </main>
-
-    <footer class="footer">
-
-    </footer>
 
 
     <script src="./main.js"></script>
 </body>
+
 </html>
