--- a/pages/compare.html
+++ b/pages/compare.html
@@ -17,7 +17,7 @@
                     <a href="../index.html" class="nav-link">home</a>
                 </li>
                 <li class="nav-li">
-                    <a href="./compare.html" class="nav-link">compare</a>
+                    <a href="./compare.html" class="nav-link active">compare characters</a>
                 </li>
                 <li class="nav-li">
                     <a href="./outro.html" class="nav-link">outro</a>
@@ -26,8 +26,7 @@
         </nav>
     </header>
     
-    <main class="main">
-        <div class="main-compare-wrapper">
+    <main class="main-compare-wrapper">
             <div class="inputs-compare">
                 <h2 class="h2">Compare Characters</h2>
                 <div class="select-wrapper">
@@ -75,11 +74,9 @@
                 <button class="show-btn">Show characters</button>
             </div>
             <div class="output-characters"></div>
-            <!-- <button class="info-btn hidden">Show additional info</button> -->
             <button class="compare-btn hidden">Compare characters</button>
             <div class="compare-holder"></div>
             <div class="differences"></div>
-        </div>
     </main>
 
 
