--- a/pages/outro.html
+++ b/pages/outro.html
@@ -19,10 +19,10 @@
                     <a href="../index.html" class="nav-link">home</a>
                 </li>
                 <li class="nav-li">
-                    <a href="./compare.html" class="nav-link">compare</a>
+                    <a href="./compare.html" class="nav-link">compare characters</a>
                 </li>
                 <li class="nav-li">
-                    <a href="./outro.html" class="nav-link">outro</a>
+                    <a href="./outro.html" class="nav-link active">outro</a>
                 </li>
             </ul>
         </nav>
@@ -31,19 +31,20 @@
     <main class="main-outro">
         <div class="container">
             <div class="credits">
-                <h2 class="h2-outro">Placeholder for rolling outro text</h2>
+                <h2 class="h2-outro">CREDITS</h2>
                 <p class="p-outro">Thank you for taking the time to check out my project! Special thanks to my lecturer
-                    Brandon Tsegai for the fun lectures. May the force be with you!
+                    Brandon Tsegai for the lectures.
                 </p>
-                <p class="p-outro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis tenetur quo,
-                    fugit ratione aut, earum optio magni vitae vel laborum culpa consequatur expedita molestias odit
-                    voluptate placeat minima provident alias excepturi debitis soluta incidunt ipsum porro? Corporis,
-                    dignissimos velit ducimus, veritatis nesciunt dolor nostrum nobis optio dolores accusantium illo!
+                <p class="p-outro">This has been a fun project since it is object oriented but especially because I am
+                    such a Star Wars fan!
                 </p>
-                <p class="p-outro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis tenetur quo,
-                    fugit ratione aut, earum optio magni vitae vel laborum culpa consequatur expedita molestias odit
-                    voluptate placeat minima provident alias excepturi debitis soluta incidunt ipsum porro? Corporis,
-                    dignissimos velit ducimus, veritatis nesciunt dolor nostrum nobis optio dolores accusantium illo!
+                <p class="p-outro">The project is an active project since I will not be able to stop adding new
+                    features, effects, characters and much more.
+                </p>
+                <p class="p-outro">Check out my GitHub page to find more of my projects, which so far is only school
+                    projects. My username is ingelajonsson.
+                </p>
+                <p class="p-outro">May the force be with you!
                 </p>
             </div>
         </div>
