last push for E-criteria

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
     </header>
 
     <main class="main-index">
-        <h2 class="h2"></h2>
         <img src="https://lumiere-a.akamaihd.net/v1/images/hb_disneyplus_skywalkersaga_mobile_19267_e964ed2c.jpeg?region=0,0,640,400"
             alt="Star Wars movie poster" style="margin-top: 20px;">
+        <p class="text-index">Welcome to my Star Wars website. With this rather playful aplication you can render
+            information of two characters of your choice and also see their similarities and differences. The
+            information about the characters is from the free API <a href="https://swapi.dev/" class="swapi-link"
+            target="_blank">https://swapi.dev/</a>.</p>
     </main>
 
 
