--- a/pages/compare.html
+++ b/pages/compare.html
@@ -27,8 +27,9 @@
     </header>
     
     <main class="main-compare-wrapper">
+        <!-- <button onclick="play()">Play Audio</button>
+        <button onclick="stop()">Stop Audio</button> -->
             <div class="inputs-compare">
-                <h2 class="h2">Compare Characters</h2>
                 <div class="select-wrapper">
                     <select name="characterOne" id="select1" required>
                         <option value="0" selected disabled>Character no. 1</option>
