--- a/pages/outro.html
+++ b/pages/outro.html
@@ -29,6 +29,7 @@
     </header>
 
     <main class="main-outro">
+        <button onclick="play()" class="play-audio">Play Audio</button>
         <div class="container">
             <div class="credits">
                 <h2 class="h2-outro">CREDITS</h2>
