added first movie function and button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     </main>
 
 
-    <script src="./main.js"></script>
+    <script src="/javascript/main.js"></script>
+    <script src="/javascript/renderCharacters.js"></script>
+    <script src="/javascript/compareCharacters.js"></script>
 </body>
 
 </html>
