--- a/pages/compare.html
+++ b/pages/compare.html
@@ -76,11 +76,15 @@
             </div>
             <div class="output-characters"></div>
             <button class="compare-btn hidden">Compare characters</button>
+            <button class="first-movie-btn hidden">First movie appearance</button>
             <div class="compare-holder"></div>
             <div class="differences"></div>
     </main>
 
 
-    <script src="../main.js"></script>
+    <script src="/javascript/main.js"></script>
+    <script src="/javascript/renderCharacters.js"></script>
+    <script src="/javascript/compareCharacters.js"></script>
+    <script src="/javascript/firstMovie.js"></script>
 </body>
 </html>
