--- a/pages/outro.html
+++ b/pages/outro.html
@@ -56,7 +56,9 @@
     </footer>
 
 
-    <script src="../main.js"></script>
+    <script src="/javascript/main.js"></script>
+    <script src="/javascript/renderCharacters.js"></script>
+    <script src="/javascript/compareCharacters.js"></script>
 </body>
 
 </html>
