added new js files and features

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <title>Star Wars Characters</title>
+    <title>Star Wars</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 
     <main class="main-index">
         <img src="https://lumiere-a.akamaihd.net/v1/images/hb_disneyplus_skywalkersaga_mobile_19267_e964ed2c.jpeg?region=0,0,640,400"
-            alt="Star Wars movie poster" style="margin-top: 20px;">
+            alt="Star Wars movie poster" style="margin-top: 20px; width: 70%;">
         <p class="text-index">Welcome to my Star Wars website. With this rather playful aplication you can render
             information of two characters of your choice and also see their similarities and differences. The
             information about the characters is from the free API <a href="https://swapi.dev/" class="swapi-link"
@@ -42,8 +42,8 @@
 
 
     <script src="/javascript/main.js"></script>
-    <script src="/javascript/renderCharacters.js"></script>
-    <script src="/javascript/compareCharacters.js"></script>
+    <!-- <script src="/javascript/renderCharacters.js"></script>
+    <script src="/javascript/compareCharacters.js"></script> -->
 </body>
 
 </html>
