--- a/pages/outro.html
+++ b/pages/outro.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Star Wars Characters</title>
+    <title>Star Wars - Credits</title>
 </head>
 
 <body class="body-outro">
@@ -42,8 +42,7 @@
                 <p class="p-outro">The project is an active project since I will not be able to stop adding new
                     features, effects, characters and much more.
                 </p>
-                <p class="p-outro">Check out my GitHub page to find more of my projects, which so far is only school
-                    projects. My username is ingelajonsson.
+                <p class="p-outro">Check out my GitHub page to find more of my projects. My username is ingelajonsson.
                 </p>
                 <p class="p-outro">May the force be with you!
                 </p>
@@ -57,8 +56,8 @@
 
 
     <script src="/javascript/main.js"></script>
-    <script src="/javascript/renderCharacters.js"></script>
-    <script src="/javascript/compareCharacters.js"></script>
+    <!-- <script src="/javascript/renderCharacters.js"></script>
+    <script src="/javascript/compareCharacters.js"></script> -->
 </body>
 
 </html>
