--- a/pages/compare.html
+++ b/pages/compare.html
@@ -78,18 +78,20 @@
                 <button class="first-movie-btn hidden">First movie appearance</button>
                 <button class="same-movie-btn hidden">Appearance in same movie</button>
                 <button class="home-planet-btn hidden">Home planet</button>
+                <button class="vehicle-btn hidden">Most expensive vehicle/starship</button>
+                <button class="compare-btn hidden">Compare characters</button>
             </div>
-            <button class="compare-btn hidden">Compare characters</button>
             <div class="compare-holder"></div>
             <div class="differences"></div>
     </main>
 
 
-    <script src="/javascript/main.js"></script>
-    <script src="/javascript/renderCharacters.js"></script>
-    <script src="/javascript/compareCharacters.js"></script>
-    <script src="/javascript/firstMovie.js"></script>
-    <script src="/javascript/sameMovie.js"></script>
-    <script src="/javascript/homePlanet.js"></script>
+    <script src="../javascript/main.js"></script>
+    <script src="../javascript/renderCharacters.js"></script>
+    <script src="../javascript/compareCharacters.js"></script>
+    <script src="../javascript/firstMovie.js"></script>
+    <script src="../javascript/sameMovie.js"></script>
+    <script src="../javascript/homePlanet.js"></script>
+    <script src="../javascript/vehicles.js"></script>
 </body>
 </html>
