--- a/pages/outro.html
+++ b/pages/outro.html
@@ -55,9 +55,7 @@
     </footer>
 
 
-    <script src="/javascript/main.js"></script>
-    <!-- <script src="/javascript/renderCharacters.js"></script>
-    <script src="/javascript/compareCharacters.js"></script> -->
+    <script src="../javascript/main.js"></script>
 </body>
 
 </html>
