--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <main class="main-index">
-        <h2 class="header-index">This application is still a work in progress...</h2>
+        <!-- <h2 class="header-index">This application is still a work in progress...</h2> -->
         <img src="https://lumiere-a.akamaihd.net/v1/images/hb_disneyplus_skywalkersaga_mobile_19267_e964ed2c.jpeg?region=0,0,640,400"
             alt="Star Wars movie poster" style="margin-top: 20px; width: 70%;">
         <p class="text-index">Welcome to my Star Wars website. With this rather playful aplication you can render
